Fix: ride names not fitting on cards properly

--- a/mousepediadb/static/css/style.css
+++ b/mousepediadb/static/css/style.css
@@ -275,7 +275,7 @@ main {
 }
 
 .ride-title {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 }
 
 .tabs .tab a:hover {
